test/bad/bad_block6.m_
begin
    while 1 do begin input x; end
end
